--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
   <title>html-css-spotifyweb</title>
 </head>
 <body>
+      <div class="wrapper d-flex">
+          <main id="site-content" class="d-flex">
+              <aside class="main-menu">Sidebar</aside>
+              <section class="covers-section">
+                  <div class="subscribe-banner">
+                      lorem
+                  </div>
+
+                  <nav>
+                       <a href="#">Lorem</a>
+                       <a href="#">Lorem</a>
+                       <a href="#">Lorem</a>
+                       <a href="#">Lorem</a>
+
+                  </nav>
+                  <h2>Recently played</h2>
+                  <div id="recently-played" class="d-flex flex-wrap">
+                      <div class="item m-25"></div>
+                      <div class="item m-25"></div>
+                      <div class="item m-25"></div>
+                      <div class="item m-25"></div>
+                      <div class="item m-25"></div>
+                      <div class="item m-25"></div>
+
+                  </div>
+
+                  <div id="created-for"></div>
+                  <div id="popular"></div>
+
+
+              </section>
+          </main>
+          <footer id="site-footer">
+              <div class="player">player</div>
+          </footer>
+      </div>
+
 
 </body>
 </html>
