--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
                   </nav>
                   <h2>Recently played</h2>
                   <div id="recently-played" class="d-flex flex-wrap">
-                      <div class="item m-25"></div>
-                      <div class="item m-25"></div>
-                      <div class="item m-25"></div>
-                      <div class="item m-25"></div>
-                      <div class="item m-25"></div>
-                      <div class="item m-25"></div>
+                      <div class="item m-15">
+
+                      </div>
+                      <div class="item m-15"></div>
+                      <div class="item m-15"></div>
+                      <div class="item m-15"></div>
+                      <div class="item m-15"></div>
+                      <div class="item m-15"></div>
 
                   </div>
 
