--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
   <title>html-css-spotifyweb</title>
 </head>
 <body>
@@ -21,23 +22,73 @@
                        <a href="#">Lorem</a>
                        <a href="#">Lorem</a>
                        <a href="#">Lorem</a>
-
                   </nav>
-                  <h2>Recently played</h2>
-                  <div id="recently-played" class="d-flex flex-wrap">
-                      <div class="item m-15">
 
+                  <h2 class="mt-25">Recently played</h2>
+                  <div id="recently-played" class="d-flex flex-wrap mt-25">
+                      <div class="item m-15">
+                        <div class="item-img">
+                          <img src="img/metal_lifting.jpg" alt="">
+                        </div>
+                        <div class="item-title">
+                          <h1 class="text-center">Heavy Metal</h1>
+                          <p>Subtitle</p>
+                        </div>
                       </div>
-                      <div class="item m-15"></div>
-                      <div class="item m-15"></div>
-                      <div class="item m-15"></div>
-                      <div class="item m-15"></div>
-                      <div class="item m-15"></div>
+                      <div class="item m-15">
+                        <div class="item-img">
+                          <img src="img/stranger.jpg" alt="">
+                        </div>
+                        <div class="item-title">
+                          <h1 class="text-center">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h1>
+                          <p>Kyle Dixon & Michael Stein</p>
+                        </div>
+                      </div>
+                      <div class="item m-15">
+                        <div class="item-img">
+                          <img src="img/aquietplace.jpeg" alt="">
+                        </div>
+                        <div class="item-title">
+                          <h1 class="text-center">A quiet place</h1>
+                          <p>Subtitle</p>
+                        </div>
+                      </div>
+                      <div class="item m-15">
+                        <div class="item-img">
+                          <img src="img/split.jpeg" alt="">
+                        </div>
+                        <div class="item-title">
+                          <h1 class="text-center">Split</h1>
+                          <p>Subtitle</p>
+                        </div>
+                      </div>
+                      <div class="item m-15">
+                        <div class="item-img">
+                          <img src="img/cure.jpeg" alt="">
+                        </div>
+                        <div class="item-title">
+                          <h1 class="text-center">A cure for Wellness</h1>
+                          <p>Subtitle</p>
+                        </div>
+                      </div>
+                      <div class="item m-15">
+                        <div class="item-img">
+                          <img src="img/sinister.jpeg" alt="">
+                        </div>
+                        <div class="item-title">
+                          <h1 class="text-center">Sinister</h1>
+                          <p>Subtitle</p>
+                        </div>
+                      </div>
 
                   </div>
 
-                  <div id="created-for"></div>
-                  <div id="popular"></div>
+                  <div id="created-for" class="d-flex flex-wrap">
+
+                  </div>
+                  <div id="popular" class="d-flex flex-wrap">
+
+                  </div>
 
 
               </section>
