--- a/index.html
+++ b/index.html
@@ -11,87 +11,122 @@
 <body>
       <div class="wrapper d-flex">
           <main id="site-content" class="d-flex">
-              <aside class="main-menu">Sidebar</aside>
-              <section class="covers-section">
-                  <div class="subscribe-banner">
-                      lorem
-                  </div>
+      <aside class="main-menu">Sidebar</aside>
+      <section class="covers-section">
+          <div class="subscribe-banner">
+              lorem
+          </div>
 
-                  <nav>
-                       <a href="#">Lorem</a>
-                       <a href="#">Lorem</a>
-                       <a href="#">Lorem</a>
-                       <a href="#">Lorem</a>
-                  </nav>
+          <nav>
+               <a href="#">Lorem</a>
+               <a href="#">Lorem</a>
+               <a href="#">Lorem</a>
+               <a href="#">Lorem</a>
+          </nav>
+      <!-- recently-played -->
+         <h2 class="mt-25">Recently played</h2>
+          <div id="recently-played" class="d-flex flex-wrap mt-25">
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/metal_lifting.jpg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Heavy Metal</h1>
+                <p>Subtitle</p>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/stranger.jpg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h1>
+                <p>Kyle Dixon & Michael Stein</p>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/aquietplace.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">A quiet place</h1>
+                <p>Subtitle</p>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/split.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Split</h1>
+                <p>Subtitle</p>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/cure.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">A cure for Wellness</h1>
+                <p>Subtitle</p>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/sinister.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Sinister</h1>
+                <p>Subtitle</p>
+              </div>
+            </div>
+          </div>
+      <!-- /recently-played -->
+      <!-- created-for -->
+          <h2 class="mt-50">Creato per John Doe</h2>
+          <p class="p-over mb-25">Più ascolti, più accurati saranno i suggerimenti.</p>
+          <div id="created-for" class="d-flex flex-wrap">
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/radar.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Realease Radar</h1>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/mixdaily.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Daily Mix 1</h1>
+              </div>
+            </div>
+          </div>
+        <!-- /created-for -->
+          <h2 class="mt-50">Artisti più popolari</h2>
+          <p class="p-over mb-25">Più ascolti, più accurati saranno i suggerimenti.</p>
+          <div id="popular" class="d-flex flex-wrap">
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/youg.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Lana Del Ray</h1>
+              </div>
+            </div>
+            <div class="item m-15">
+              <div class="item-img">
+                <img src="img/einaudi.jpeg" alt="">
+              </div>
+              <div class="item-title">
+                <h1 class="text-center">Einaudi</h1>
+              </div>
+            </div>
+          </div>
 
-                  <h2 class="mt-25">Recently played</h2>
-                  <div id="recently-played" class="d-flex flex-wrap mt-25">
-                      <div class="item m-15">
-                        <div class="item-img">
-                          <img src="img/metal_lifting.jpg" alt="">
-                        </div>
-                        <div class="item-title">
-                          <h1 class="text-center">Heavy Metal</h1>
-                          <p>Subtitle</p>
-                        </div>
-                      </div>
-                      <div class="item m-15">
-                        <div class="item-img">
-                          <img src="img/stranger.jpg" alt="">
-                        </div>
-                        <div class="item-title">
-                          <h1 class="text-center">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h1>
-                          <p>Kyle Dixon & Michael Stein</p>
-                        </div>
-                      </div>
-                      <div class="item m-15">
-                        <div class="item-img">
-                          <img src="img/aquietplace.jpeg" alt="">
-                        </div>
-                        <div class="item-title">
-                          <h1 class="text-center">A quiet place</h1>
-                          <p>Subtitle</p>
-                        </div>
-                      </div>
-                      <div class="item m-15">
-                        <div class="item-img">
-                          <img src="img/split.jpeg" alt="">
-                        </div>
-                        <div class="item-title">
-                          <h1 class="text-center">Split</h1>
-                          <p>Subtitle</p>
-                        </div>
-                      </div>
-                      <div class="item m-15">
-                        <div class="item-img">
-                          <img src="img/cure.jpeg" alt="">
-                        </div>
-                        <div class="item-title">
-                          <h1 class="text-center">A cure for Wellness</h1>
-                          <p>Subtitle</p>
-                        </div>
-                      </div>
-                      <div class="item m-15">
-                        <div class="item-img">
-                          <img src="img/sinister.jpeg" alt="">
-                        </div>
-                        <div class="item-title">
-                          <h1 class="text-center">Sinister</h1>
-                          <p>Subtitle</p>
-                        </div>
-                      </div>
 
-                  </div>
-
-                  <div id="created-for" class="d-flex flex-wrap">
-
-                  </div>
-                  <div id="popular" class="d-flex flex-wrap">
-
-                  </div>
-
-
-              </section>
+      </section>
           </main>
           <footer id="site-footer">
               <div class="player">player</div>
