--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
       <aside class="main-menu">Sidebar</aside>
       <section class="covers-section">
           <div class="subscribe-banner">
-              lorem
+            <div class="btn-top text-center">
+              <a href="#">EFFETTUA L'UPGRADE</a>
+            </div>
           </div>
 
-          <nav>
-               <a href="#">Lorem</a>
-               <a href="#">Lorem</a>
-               <a href="#">Lorem</a>
-               <a href="#">Lorem</a>
+          <nav id="nav" class="uppercase text-center mt-25">
+                <a href="#">in evidenza</a>
+                <a href="#">podcast</a>
+                <a href="#">classifiche</a>
+                <a href="#">generi e mood</a>
+                <a href="#">nuove uscite</a>
+                <a href="#">scopri</a>
           </nav>
       <!-- recently-played -->
          <h2 class="mt-25">Recently played</h2>
