--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">
   <title>html-css-spotifyweb</title>
 </head>
 <body>
@@ -14,7 +15,65 @@
       <!-- Sidebar -->
       <aside class="main-menu">
         <div class="logo">
-          <img src="img/logo.svg" alt="">
+          <a href="#">
+            <img src="img/logo.svg" alt="">
+          </a>
+        </div>
+        <div class="logo-small">
+          <a href="#">
+            <img src="img/logo-small.svg" alt="">
+          </a>
+        </div>
+        <div class="home">
+          <a href="#">
+            <img src="img/home.svg" alt="">
+            <span>Home</span>
+          </a>
+        </div>
+        <div class="search">
+          <a href="#">
+            <img src="img/search.svg" alt="">
+            <span>Cerca</span>
+          </a>
+        </div>
+        <div class="libreria">
+          <a href="#">
+            <img src="img/libreria.svg" alt="">
+            <span>La tua libreria</span>
+          </a>
+        </div>
+        <div class="playlist">
+          <h1>PLAYLIST</h1>
+          <div class="crea-playlist">
+            <a href="#">
+              <i class="fas fa-plus-square"></i>
+              <span>Crea Playlist</span>
+            </a>
+          </div>
+          <div class="list-playlist">
+            <a href="#"><p>Nome Playlist</p></a>
+            <a href="#"><p>Nome Playlist</p></a>
+            <a href="#"><p>Nome Playlist</p></a>
+            <a href="#"><p>Nome Playlist</p></a>
+            <a href="#"><p>Nome Playlist</p></a>
+            <a href="#"><p>Nome Playlist</p></a>
+            <a href="#"><p>Nome Playlist</p></a>
+          </div>
+        </div>
+
+        <div class="bot-side">
+          <div class="installa">
+            <a href="#">
+              <img src="img/download.svg" alt="">
+              <span>Installa app</span>
+            </a>
+          </div>
+          <div class="profile-side">
+            <a href="#">
+              <img src="img/profile.svg" alt="">
+              <span>John Doe</span>
+            </a>
+          </div>
         </div>
       </aside>
       <!-- Sidebar -->
