Overlay on Image

--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
           <div id="recently-played" class="d-flex flex-wrap mt-25">
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/metal_lifting.jpg" alt="">
+                <a href="#">
+                  <img src="img/metal_lifting.jpg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Heavy Metal</h1>
@@ -110,7 +115,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/stranger.jpg" alt="">
+                <a href="#">
+                  <img src="img/stranger.jpg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h1>
@@ -119,7 +129,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/aquietplace.jpeg" alt="">
+                <a href="#">
+                  <img src="img/aquietplace.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">A quiet place</h1>
@@ -128,7 +143,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/split.jpeg" alt="">
+                <a href="#">
+                  <img src="img/split.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Split</h1>
@@ -137,7 +157,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/cure.jpeg" alt="">
+                <a href="#">
+                  <img src="img/cure.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">A cure for Wellness</h1>
@@ -146,7 +171,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/sinister.jpeg" alt="">
+                <a href="#">
+                  <img src="img/sinister.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Sinister</h1>
@@ -161,7 +191,12 @@
           <div id="created-for" class="d-flex flex-wrap">
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/radar.jpeg" alt="">
+                <a href="#">
+                  <img src="img/radar.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Realease Radar</h1>
@@ -169,7 +204,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/mixdaily.jpeg" alt="">
+                <a href="#">
+                  <img src="img/mixdaily.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Daily Mix 1</h1>
@@ -183,7 +223,12 @@
           <div id="popular" class="d-flex flex-wrap">
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/youg.jpeg" alt="">
+                <a href="#">
+                  <img src="img/youg.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Lana Del Ray</h1>
@@ -191,7 +236,12 @@
             </div>
             <div class="item m-15">
               <div class="item-img">
-                <img src="img/einaudi.jpeg" alt="">
+                <a href="#">
+                  <img src="img/einaudi.jpeg" alt="">
+                </a>
+                <div class="overlay">
+                  <i class="fas fa-play-circle text"></i>
+                </div>
               </div>
               <div class="item-title">
                 <h1 class="text-center">Einaudi</h1>
