Media Query Adjustment

--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
   <main id="site-content" class="d-flex">
       <!-- Sidebar -->
       <aside class="main-menu">
-        <div class="logo">
-          <a href="#">
-            <img src="img/logo.svg" alt="">
-          </a>
-        </div>
-        <div class="logo-small">
-          <a href="#">
-            <img src="img/logo-small.svg" alt="">
-          </a>
-        </div>
-        <div class="home">
-          <a href="#">
-            <img src="img/home.svg" alt="">
-            <span>Home</span>
-          </a>
-        </div>
-        <div class="search">
-          <a href="#">
-            <img src="img/search.svg" alt="">
-            <span>Cerca</span>
-          </a>
-        </div>
-        <div class="libreria">
-          <a href="#">
-            <img src="img/libreria.svg" alt="">
-            <span>La tua libreria</span>
-          </a>
-        </div>
+        <div class="center-sidebar">
+          <div class="logo">
+            <a href="#">
+              <img src="img/logo.svg" alt="">
+            </a>
+          </div>
+          <div class="logo-small">
+            <a href="#">
+              <img src="img/logo-small.svg" alt="">
+            </a>
+          </div>
+          <div class="home">
+            <a href="#">
+              <img src="img/home.svg" alt="">
+              <span>Home</span>
+            </a>
+          </div>
+          <div class="search">
+            <a href="#">
+              <img src="img/search.svg" alt="">
+              <span>Cerca</span>
+            </a>
+          </div>
+          <div class="libreria">
+            <a href="#">
+              <img src="img/libreria.svg" alt="">
+              <span>La tua libreria</span>
+            </a>
+          </div>
         <div class="playlist">
           <h1>PLAYLIST</h1>
           <div class="crea-playlist">
@@ -61,6 +62,7 @@
             <a href="#"><p>Nome Playlist</p></a>
           </div>
         </div>
+      </div>
 
         <div class="bot-side">
           <div class="installa">
@@ -270,6 +272,9 @@
               <a href="#"><i class="far fa-folder"></i></a>
             </div>
           </div>
+            <div class="nav-bot-center">
+
+            </div>
 
 
         </div>
