Left, center navbottom

--- a/index.html
+++ b/index.html
@@ -258,24 +258,50 @@
   <!-- /Main -->
 
       <footer id="site-footer">
-        <div class="player">
-          <div class="now-playing">
+        <div class="player d-flex">
+          <div class="nav-bot-left d-flex">
             <div class="playing-img">
               <img src="img/sinister.jpeg" alt="">
             </div>
             <div class="playing-title">
               <p>Sinister</p>
-              <p class="d-block brano">Brano Nome</p>
+              <p class="brano">Brano Nome</p>
             </div>
             <div class="playing-icon">
               <a href="#"><i class="far fa-heart"></i></a>
               <a href="#"><i class="far fa-folder"></i></a>
             </div>
           </div>
-            <div class="nav-bot-center">
 
+            <div class="nav-bot-center d-flex">
+              <div class="player-control d-flex">
+                <i class="fas fa-random"></i>
+                <i class="fas fa-step-backward"></i>
+                <i class="far fa-play-circle"></i>
+                <i class="fas fa-step-forward"></i>
+                <i class="fas fa-redo-alt"></i>
+              </div>
+              <div class="song-timer d-flex">
+                <div class="song-time">
+                  <span>0:25</span>
+                </div>
+                <div class="song-bar">
+                </div>
+                <div class="song-end">
+                  <span>4:35</span>
+                </div>
+              </div>
             </div>
 
+          <div class="nav-bot-right d-flex">
+            <i class="fas fa-list"></i>
+            <i class="fas fa-desktop"></i>
+            <i class="fas fa-volume-up"></i>
+            <div class="volume-bar">
+              <div class="volume-bar-control">
+              </div>
+            </div>
+          </div>
 
         </div>
 
