--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
                   <span>0:25</span>
                 </div>
                 <div class="song-bar">
+                  <div class="song-bar-control">
+
+                  </div>
                 </div>
                 <div class="song-end">
                   <span>4:35</span>
