Last Adjustment and Animation !END!

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
           <!-- Sub Banner -->
         <!-- NavBar top -->
           <nav id="nav" class="uppercase text-center mt-50">
-                <a href="#">in evidenza</a>
-                <a href="#">podcast</a>
-                <a href="#">classifiche</a>
-                <a href="#">generi e mood</a>
-                <a href="#">nuove uscite</a>
-                <a href="#">scopri</a>
+                <a href="#"><span>in evidenza</span></a>
+                <a href="#"><span>podcast</span></a>
+                <a href="#"><span>classifiche</span></a>
+                <a href="#"><span>generi e mood</span></a>
+                <a href="#"><span>uove uscite</span></a>
+                <a href="#"><span>scopri</span></a>
           </nav>
         <!-- NavBar top -->
       <!-- recently-played -->
@@ -256,9 +256,10 @@
       </section>
   </main>
   <!-- /Main -->
-
+<!-- Footer -->
       <footer id="site-footer">
         <div class="player d-flex">
+              <!-- Navbar bot left -->
           <div class="nav-bot-left d-flex">
             <div class="playing-img">
               <img src="img/sinister.jpeg" alt="">
@@ -272,7 +273,8 @@
               <a href="#"><i class="far fa-folder"></i></a>
             </div>
           </div>
-
+            <!-- /Navbar bot left -->
+            <!-- Navbar bot center -->
             <div class="nav-bot-center d-flex">
               <div class="player-control d-flex">
                 <i class="fas fa-random"></i>
@@ -295,7 +297,8 @@
                 </div>
               </div>
             </div>
-
+            <!-- /Navbar bot center -->
+            <!-- Navbar bot right -->
           <div class="nav-bot-right d-flex">
             <i class="fas fa-list"></i>
             <i class="fas fa-desktop"></i>
@@ -309,6 +312,8 @@
         </div>
 
       </footer>
+  <!-- /Footer -->
+
 </div>
 
 
